v.anessazambrano0305.github.io

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,8 +2,19 @@
 <html>
     <head>
         <title> </title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     </head>
-    <body>
-    <h1>About Me!</h1>
+    <body id="body2">
+    <h1 id="hh1">About Vanessa !</h1>
+    <p id="hello">Hello, My name  is Vanessa Zambrano. I am class of 2019
+    and I attend The Williamsburg High School of Art + Technology.
+    My favorite thing to do is play Basketball. My team and I,
+    "Lyons", won the NYSAA (New York Scholastic Athletic Association)
+    championship. I see myself being in the WNBA in the future. I love
+    to play basketball. I will also be a software engineer. </p>
     </body>
 </html>
