v.anessazambrano0305.github.io

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,7 @@
     My favorite thing to do is play Basketball. My team and I,
     "Lyons", won the NYSAA (New York Scholastic Athletic Association)
     championship. I see myself being in the WNBA in the future. I love
-    to play basketball. I will also be a software engineer. </p>
+    to play basketball. I will also be a software engineer. I Will go
+    to college and learn everything I need, to become a software engineer.</p>
     </body>
 </html>
