--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,13 @@
         <title> </title>
     </head>
     <body>
-    <p>this is cool </p>
+    <p>Portfolio </p>
+    <h1>Fanpage</h1>
+    <ul>
+        <li> <a href="https://github.com/vanessazambrano/fanpage">Repo</a></li>
+        <li> <a href="https://github.com/vanessazambrano/rockpaperscissors">Repo</a></li>
+        <li> <a href="https://vanessazambrano.github.io/playlist/">Repo</a></li>
+        <li> <a href=" https://vanessazambrano.github.io/quiz/"></a></li>
+    </ul>
     </body>
 </html>
